Add Graham Dutton

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,8 @@ Previous Authors:
    Patrick Loiseleur (coq)
    Dilip Sequeira    (lego)
    David von Oheimb  (x-symbol)
+
+Assistance also from:
+
+   Graham Dutton     (web support)
+
