--- a/doc/ProofGeneral.texi
+++ b/doc/ProofGeneral.texi
@@ -568,9 +568,9 @@ For more details, @pxref{Script editing commands},
 and @ref{Script processing commands}.
 
 @item @i{Proof-tree visualization}@*
-In cooperation with the external program @code{prooftree}
+In cooperation with the external program Prooftree
 (available from the @uref{http://askra.de/software/prooftree/,
-prooftree website}), Proof General can display proof trees
+Prooftree website}), Proof General can display proof trees
 graphically and provide visual information about the proof status
 of different branches in a proof. The proof-tree display provides
 additional means for inspecting the proof tree and thus helps
@@ -3057,15 +3057,17 @@ Query the prover about the identifier near mouse click @var{event}.
 @chapter Graphical Proof-Tree Visualization
 @cindex proof-tree visualization
 
-Since version 4.1.1, Proof General supports proof-tree
+Since version 4.2, Proof General supports proof-tree
 visualization on graphical desktops via the additional program
-@code{prooftree}. Currently, proof-tree visualization is only
-supported for the Coq proof assistant. For installation
-instructions and more detailed information about the
-@code{prooftree} program, please refer to the
-@uref{http://askra.de/software/prooftree/, prooftree website} and
+Prooftree. Currently, proof-tree visualization is only supported
+for the Coq proof assistant. For installation instructions and
+more detailed information about Prooftree, please refer to the
+@uref{http://askra.de/software/prooftree/, Prooftree website} and
 the @uref{http://askra.de/software/prooftree/prooftree.man.html,
-prooftree man page}.
+Prooftree man page}. For information about how to support
+proof-tree visualization for a different proof assistant, see
+Section @i{Configuring Proof-Tree Visualization} in the
+@i{Adapting Proof General} manual.
 
 @menu
 * Starting and Stopping Proof-Tree Visualization::
@@ -3099,7 +3101,7 @@ invoke @code{proof-tree-external-display-toggle} by one of the
 three indicated means again. Alternatively you can also close the
 proof-tree window. 
 
-Proof General launches only one instance of @code{prooftree},
+Proof General launches only one instance of Prooftree,
 which can manage an arbitrary amount of proof-tree windows. 
 
 @node Features of Prooftree
@@ -3109,7 +3111,7 @@ The proof-tree window provides visual information about the
 status of the different branches in your proof (by coloring
 completely proved branches in green, for example) and means for
 inspecting previous proof states without the need to retract
-parts of your proof script. Currently, @code{prooftree} provides
+parts of your proof script. Currently, Prooftree provides
 the following features:
 
 @itemize @bullet
@@ -3129,22 +3131,22 @@ your proof to try an different approach.
 @end itemize
 
 For a more elaborated description please consult the help dialog
-of @code{prooftree} or the
+of Prooftree or the
 @uref{http://askra.de/software/prooftree/prooftree.man.html,
-prooftree man page}.
+Prooftree man page}.
 
 
 @node Prooftree Customization
 @section Prooftree Customization
 
-The location of the @code{prooftree} program and command line
+The location of the Prooftree program and command line
 arguments can be configured in the customization group
 @code{proof-tree}. You can visit this customization group inside
 a running instance of Proof General by typing @code{M-x
 customize-group <RET> proof-tree <RET>}.
 
 The graphical aspects of the proof-tree rendering, fonts and
-colors can be changed inside @code{prooftree} by invoking the
+colors can be changed inside Prooftree by invoking the
 @code{Configuration} item of the main menu.
 
 Prover specific parts such as the regular expressions for
@@ -3152,10 +3154,6 @@ recognizing subgoals, existential variables and navigation and
 cheating commands are in the customization group
 @code{proof-tree-internals}. Under normal circumstances there
 should be no need to change one of these internal settings. 
-
-To adapt the graphical proof-tree display for a new proof
-assistant refer to section XXX in the @i{Adapting Proof
-General} manual.
 
 
 @c =================================================================
@@ -4739,7 +4737,7 @@ you want to save abbrevs; answer yes.
 @node Proof-Tree Visualization
 @section Proof-Tree Visualization
 
-Starting with Proof General version 4.1.1 and Coq version 8.4, Coq
+Starting with Proof General version 4.2 and Coq version 8.4, Coq
 Proof General has full support for proof-tree visualization, 
 @pxref{Graphical Proof-Tree Visualization}.
 
